<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/bino"
            android:title="@string/Nearby" />
        <item
            android:id="@+id/nav_algae"
            android:icon="@drawable/algaebw"
            android:title="@string/Algae" />
        <item
            android:id="@+id/nav_seller"
            android:icon="@drawable/shopbw"
            android:title="@string/Shop" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/Settings" />
        <item
            android:id="@+id/nav_users_gallery"
            android:icon="@drawable/gallery"
            android:title="@string/users_gallery" />
        <item
            android:id="@+id/nav_micro_calc"
            android:icon="@drawable/table_bw"
            android:title="@string/micro_calculator" />
        <item
            android:id="@+id/nav_macro_calc"
            android:icon="@drawable/table_bw"
            android:title="@string/macro_calculator" />
        <item
            android:id="@+id/nav_converter"
            android:icon="@drawable/converter_filled"
            android:title="@string/converters" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/expense"
            android:title="@string/expense" />
        <item
            android:id="@+id/nav_chatbox"
            android:icon="@drawable/shout"
            android:title="@string/shout_box" />
        <item
            android:id="@+id/nav_my_chats"
            android:icon="@drawable/chats"
            android:title="@string/my_chats_beta" />

    </group>

    <item android:title="@string/Legal">
        <menu>
            <item
                android:id="@+id/nav_privacy"
                android:title="@string/PP" />
            <item
                android:id="@+id/nav_disclaimer"
                android:title="@string/Disclaimer" />
            <item
                android:id="@+id/nav_open_source_license"
                android:title="@string/OSL" />
            <item
                android:id="@+id/nav_help"
                android:title="@string/Help" />
            <item
                android:id="@+id/nav_icons8"
                android:title="@string/Icons8" />

        </menu>
    </item>

    <item
        android:id="@+id/nav_version"
        android:title="@string/Version" />

</menu>
