<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ConversionActivity"
    tools:showIn="@layout/activity_conversion">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/highlight">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Vol"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"

                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/ConversionInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:padding="5dp"
                    android:background="@drawable/fillbox"
                    android:textSize="12sp"
                    android:hint="@string/EnterInp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:padding="5dp"
                    android:text="@string/From"/>
                <Spinner
                    android:id="@+id/FromSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                </Spinner>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:padding="5dp"
                    android:text="@string/To"/>
                <Spinner
                    android:id="@+id/ToSpinner"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>
               <TextView
                   android:id="@+id/ok"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:clickable="true"
                   android:focusable="true"
                   android:background="@drawable/alarmbuttonshape"
                   android:padding="10dp"
                   android:textColor="@color/colorPrimary"
                   android:text="@string/ok"/>
            </LinearLayout>

            <TextView
                android:id="@+id/ConversionOutput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:padding="5dp"
                android:textSize="13sp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.v4.widget.NestedScrollView>