<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        app:cardCornerRadius="5dp"
        android:elevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/ItemImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/CD"
        android:scaleType="centerCrop"
        android:src="@drawable/noimage"/>
        <ImageView
            android:layout_margin="1dp"
            android:id="@+id/TakePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:src="@drawable/cam"/>

        <ImageButton
            android:visibility="gone"
            android:id="@+id/DeleteItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/delete" />
        <ProgressBar
            android:visibility="gone"
            android:id="@+id/LoadingProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:text="@string/Name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/SellerItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NoInfo"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:text="@string/Quan"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/SellerItemQuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NoInfo"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:text="@string/Price"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/SellerItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NoInfo"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:text="@string/Availability"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/SellerItemAvail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NoInfo"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:text="@string/Description"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/SellerItemDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NoInfo"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>